samples/_failures_safe/1761071053_769866_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23536ee0.c: In function ‘main’:
./samples/SAFE/__tmp_23536ee0.c:146:9: error: expected expression at end of input
  146 |         if (parse_log_line(input_buffer, &
      |         ^~
./samples/SAFE/__tmp_23536ee0.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23536ee0.c:146:9: error: expected declaration or statement at end of input
